--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 <ul><li>1,5 часа практики и никакой воды! </li>
         <li>Нет фотоаппарата? Выдадим!</li>
         <li>Легкий шаг стать фотографом и осуществить свою мечту</li></ul>
-        <a href="https://t.me/s_fifi">Записаться на первый урок </a>
+        <button><a href="https://t.me/s_fifi">Записаться на первый урок </a></button>
 </p> 
 </body>
+
 </html>
