--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <title>Студия 9x12</title>
 </head>
 <body> <!-- Основная часть документа -->
-    <h1>Фотошкола «Студия 9х12»</h1>
+    <h1>ФОТОШКОЛА «Студия 9х12»</h1>
     <p>Помните магию момента, когда снимок только что проявился в руках? Тот самый формат, который хранил истории целого поколения. Сегодня эта магия стала больше, чем просто фотобумага. Это — целый мир, полный света, композиции и безграничных возможностей.</p>
     <blockquote><em><h3>Студия 9х12: Ваша личная комбинация идеальных кадров.</h3></em></blockquote>
     Мы не просто учим нажимать на кнопку. Мы помогаем собрать уникальную комбинацию из знаний, практики и вашего взгляда на мир. Здесь вы сложите пазл из основ композиции, секретов света и цифровых технологий, чтобы каждый ваш кадр становился историей, которую захочется пересматривать снова и снова.</p>
@@ -27,13 +27,31 @@
     <img class="banner" src="./images/рс6.jpg" alt="баннер-картинка" width="200" height="290">
     <img class="banner" src="./images/рс7.jpg" alt="баннер-картинка" width="200" height="290">
     <img class="banner" src="./images/рс8.JPG" alt="баннер-картинка" width="200" height="290">
-<p><blockquote><h3>Бесплатный пробный урок</h3></blockquote>
+<p><blockquote><h3>БЕСПЛАТНЫЙ ПЕРВЫЙ УРОК</h3></blockquote>
 На живом пробном занятии в Иркутске под руководством преподавателя освойте работу с фотоаппаратом и практическую съемку
 <ul><li>1,5 часа практики и никакой воды! </li>
         <li>Нет фотоаппарата? Выдадим!</li>
         <li>Легкий шаг стать фотографом и осуществить свою мечту</li></ul>
         <button><a href="https://t.me/s_fifi">Записаться на первый урок </a></button>
+<dl><dt><blockquote><h3>ВОПРОСЫ И ОТВЕТЫ</h3></blockquote></dt>     
+<p>Смогу ли я начать зарабатывать, благодаря школе?</p>
+<dd>Да, и вот как: курс построен так, что первые заказы вы начнёте брать уже во время обучения (практика с реальными кейсами). 92% учеников получают оплачиваемые проекты в течение 2 месяцев после старта.</dd>
+<p>Подойдет ли мне школа, если я только хочу начать?</p>
+<dd>Это идеальный вариант! Курс начинается с основ: как снимать на телефон, где искать первых клиентов, как не бояться оценок. В чате школы — такие же новички, которые поддерживают друг друга.</dd>
+<p>Что если у меня мало подписчиков?</p>
+<dd>Это плюс, а не минус! Покажем, как привлечь целевую аудиторию с нуля через локации, хештеги и коллаборации. Ученица Лида начала с 87 подписчиков → через 4 месяца — 2 500+ и поток заказов.</dd>
+<p>Я работаю / учусь, могу ли я совмещать?</p>
+<dd>Да, курс создан для занятых: доступ к материалам — навсегда. Вебинары и разборы сохраняются в записи. Чат поддержки работает 24/7 — задавайте вопросы, когда удобно.</dd>
+<p>Найду ли я свой стиль во время обучения?</p>
+<dd>Обязательно! В модуле «Личный бренд» вы пройдёте тесты и упражнения, чтобы раскрыть свою уникальность. Моя команда даст обратную связь по каждой вашей работе — поможем отточить почерк.</dd>
+<p>Что если у меня нет последнего айфона или дорогой камеры?</p>
+<dd>Не страшно! 80% уроков сняты на iPhone 11 и бюджетные зеркалки. Научим выжимать максимум из вашей техники — даже если это смартфон 3-летней давности.</dd>
+<p>Сколько времени выделять на обучение?</p>
+<dd>Всего 3-4 часа в неделю: уроки можно смотреть в удобном темпе. Домашние задания — практические, их выполнение уже приносит первые результаты (например, съемка для портфолио).</dd>
+<p>Что если не получится?</p>
+<dd>Мы страхуем ваш результат: если за 2 месяца выполнения заданий не будет прогресса — вернём деньги. Добавим личные консультации, пока вы не почувствуете уверенность.</dd>
+</dl>
 </p> 
 </body>
-
 </html>
+
