--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h3>БЕСПЛАТНЫЙ ПЕРВЫЙ УРОК</h3>
     </blockquote>
 </p>
-На живом пробном занятии в Иркутске под руководством преподавателя освойте работу с фотоаппаратом и практическую съемку
+На живом пробном занятии в Иркутске под руководством преподавателя освоите работу с фотоаппаратом и практическую съемку
 <ul><li>1,5 часа практики и никакой воды! </li>
         <li>Нет фотоаппарата? Выдадим!</li>
         <li>Легкий шаг стать фотографом и осуществить свою мечту</li></ul>
@@ -84,5 +84,6 @@
 
 </body>
 </html>
+
 
 
